@@ -1,3 +1,8 @@
+Sun Jun 29 17:10:30 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ext/openssl/ossl.h: include winsock.h if USE_WINSOCK2 is not defined.
+	  a patch from arton <artonx at yahoo.co.jp> in [ruby-dev:35078]
+
 Sun Jun 29 17:07:30 2008  wanabe  <s.wanabe@gmail.com>
 
 	* util.c (ruby_strtod): ruby_strtod don't allow a trailing
